fabrik/internal/engine/testdata/grammar.txt
Grammar errors: counts, unknown method, bad path, unknown option, empty name.
-- go.mod --
module app

go 1.26
-- main.go --
package main

func main() {
	if err := run(); err != nil {
		panic(err)
	}
}
-- web/web.go --
package web

import "net/http"

//fabrik:http GET
func MissingPath(w http.ResponseWriter, r *http.Request) {}

//fabrik:http B@D /x
func BadMethod(w http.ResponseWriter, r *http.Request) {}

//fabrik:http GET nope
func BadPath(w http.ResponseWriter, r *http.Request) {}

//fabrik:http GET /x foo=bar
func UnknownOption(w http.ResponseWriter, r *http.Request) {}

//fabrik:http GET /x /y
func Extra(w http.ResponseWriter, r *http.Request) {}

//fabrik:provider xyz
func ProviderArg() *struct{} { return nil }

//fabrik:
func Empty(w http.ResponseWriter, r *http.Request) {}

//fabrik:job name=x
func Unknown(w http.ResponseWriter, r *http.Request) {}
-- want/diags --
error: web/web.go:5:1: //fabrik:http requires PATH after METHOD (got only "GET")
  help: example: //fabrik:http GET /login
error: web/web.go:8:15: invalid HTTP method "B@D"
  help: any HTTP method token works: GET, POST, ..., and extensions like PURGE
error: web/web.go:11:19: route path must start with "/" (got "nope")
  help: example: //fabrik:http GET /login
error: web/web.go:14:22: unknown option "foo" for //fabrik:http
  help: known options: middleware=
error: web/web.go:17:22: unexpected argument "/y"
  help: //fabrik:http takes only METHOD and PATH
error: web/web.go:20:19: //fabrik:provider takes no arguments (got "xyz")
  help: example: //fabrik:provider
error: web/web.go:23:1: empty directive after "fabrik:"
  help: expected one of: http, http:group, http:handle, http:methodnotallowed, http:middleware, http:notfound, http:server, http:static, init, provider
error: web/web.go:26:1: unknown directive "fabrik:job"
  help: known: http, http:group, http:handle, http:methodnotallowed, http:middleware, http:notfound, http:server, http:static, init, provider
